rpa-builder/6.2/modules/ROOT/pages/toolbox-aws-operations-key-values-with-aws.adoc


= Key Values With AWS

The Key values with AWS action step enables you to extract form data by sending a local file to the AWS Textract service, which returns the extracted key-value pairs.

== Before You Begin 

//General introduction and warning about AWS services language support
include::partial$aws-action-steps-language-support.adoc[tag=languageSupportAdvice]

//Link to list of languages supported by Amazon Textract
include::partial$aws-action-steps-language-support.adoc[tag=supportedLanguagesAmazonTextract]

== Inbound Variables

* *Directory Path*
* *File Name*
* *Password*
* *Read text from page*
* *Read text to page*
* *AWS Credentials*
+
Or, if *Use custom settings* is activated in the wizard:
+
** *Client Id*
** *Client Secret*
** *Session Token*
** *Use Session Token*
** *Region Endpoint*
* *Json Path*

== Outbound Variables

* *Raw Text*
+
The extracted raw text of the document.
* *Normalized Json*
+
The parsed result based on the normalized result and defined Json path.
* *Raw Json*
+
The complete AWS response.

== Wizard

image:key-values-with-aws-wizard.png[50%,50%]


* *Authentication Settings*
+
The AWS credentials to use for authentication
+
** *Pin credentials*
+
Use this option to reference an existing *Credentials for AWS* configuration.
** *Use custom settings*
+
Use this option to specify an AWS *Cliend ID*, *Client Secret*, and *Region Endpoint* for this action step.
** *Session Token*
+
The session token to use for authentication when *Use session token to authenticate* is selected.
* *Response settings*
** *JsonPath Expression*
+
The Json path to the property of the response object.
* *File Settings*
** *Directory path*
+
The path to the directory where the file is located.
** *File name*
+
The name of the file to analyze. Supported file types: PDF, JPEG, and PNG.
* *PDF Settings*
+
These settings show when the selected file is a PDF.
+
** *PDF file is password protected*
+
Specifies if the selected PDF file is password protected. When selected, specify the password to open the file in the *Password to open PDF file* filed.
** *Read entire file*
+
Instructs the service to read the entire file.
** *Read page range*
+
Instructs the service to read the selected range of pages.
+
*** *From page*
+
Specify from which page the service starts reading the file.
*** *To page*
+
Specifies until which page the service reads the file.
*** *Read to end of file*
+
Instructs the service to continue reading until the end of the file.

== See Also

* https://docs.aws.amazon.com/textract/latest/dg/how-it-works-kvp.html[Amazon Textract: Form Data (Key-Value Pairs)^]
